@@ -170,9 +170,13 @@ IF (UNIX)
 			SET( LFLA "-Wl,-rpath,${MKL_PATH}/../lib/32 -L${MKL_PATH}/../lib/32 -lvml " )
 		ENDIF ( NNFW_CONFIG MATCHES mkl )
 		IF( USE_FRAMEWORKS )
-			SET( LFLA " -framework nnfw -F${CMAKE_INSTALL_PREFIX} ${LFLA}" )
+			SET( LFLA " -F${CMAKE_INSTALL_PREFIX} ${LFLA}" )
+			SET( CLIB " -framework cnnfw " )
+			SET( CPPLIB " -framework nnfw " )
 		ELSE( USE_FRAMEWORKS )
-			SET( LFLA "-L${CMAKE_INSTALL_PREFIX}/lib -lnnfw -Wl,-rpath,${CMAKE_INSTALL_PREFIX}/${LIB_DIR} ${LFLA}" )
+			SET( LFLA "-L${CMAKE_INSTALL_PREFIX}/lib -Wl,-rpath,${CMAKE_INSTALL_PREFIX}/${LIB_DIR} ${LFLA}" )
+			SET( CLIB " -lcnnfw " )
+			SET( CPPLIB " -lnnfw " )
 		ENDIF( USE_FRAMEWORKS )
 	ELSE ( NNFW_CONFIG MATCHES shared )
         EXEC_PROGRAM( gsl-config ARGS --libs-without-cblas OUTPUT_VARIABLE GSL_ELIB )
@@ -180,10 +184,12 @@ IF (UNIX)
 			SET( LFLA "-Wl,-rpath,${MKL_PATH}/../lib/32 -L${MKL_PATH}/../lib/32 -lmkl -lvml " )
 		ENDIF ( NNFW_CONFIG MATCHES mkl )
 		IF( APPLE )
-			SET( LFLA "-L${CMAKE_INSTALL_PREFIX}/lib -lnnfw ${LFLA} ${GSL_ELIB} -F${QT_LIBRARY_DIR} -framework QtXml" )
+			SET( LFLA "-L${CMAKE_INSTALL_PREFIX}/lib ${LFLA} ${GSL_ELIB} -F${QT_LIBRARY_DIR} -framework QtXml" )
 		ELSE( APPLE )
-			SET( LFLA "-L${CMAKE_INSTALL_PREFIX}/lib -lnnfw ${LFLA} ${GSL_ELIB} -L${QT_LIBRARY_DIR} -lQtXml" )
+			SET( LFLA "-L${CMAKE_INSTALL_PREFIX}/lib ${LFLA} ${GSL_ELIB} -L${QT_LIBRARY_DIR} -lQtXml" )
 		ENDIF( APPLE )
+		SET( CLIB " -lcnnfw " )
+		SET( CPPLIB " -lnnfw " )
 	ENDIF ( NNFW_CONFIG MATCHES shared )
 
 	CONFIGURE_FILE( ${NNFW_SOURCE_DIR}/bin/nnfw-config_template ${NNFW_BINARY_DIR}/nnfw-config @ONLY IMMEDIATE )
