@@ -6,6 +6,9 @@ MESSAGE(STATUS "Apply the Macro TARGET_USE_NNFW(targetname) for use NNFW")
 SET( NNFW_CONFIG @NNFW_CONFIG@ )
 SET( USE_FRAMEWORKS @USE_FRAMEWORKS@ )
 
+###################################
+### MACRO for C++ Project       ##
+##################################
 MACRO( TARGET_USE_NNFW targetname )
 
 GET_TARGET_PROPERTY( OLD1 ${targetname} COMPILE_FLAGS )
@@ -18,13 +21,37 @@ GET_TARGET_PROPERTY( OLD2 ${targetname} LINK_FLAGS )
 IF ( OLD2 MATCHES NOTFOUND )
 	SET( OLD2 "" )
 ENDIF( OLD2 MATCHES NOTFOUND )
-SET_TARGET_PROPERTIES( ${targetname} PROPERTIES LINK_FLAGS "${OLD2} @LFLA@" )
+SET_TARGET_PROPERTIES( ${targetname} PROPERTIES LINK_FLAGS "${OLD2} @LFLA@ @CPPLIB@" )
 
 IF( NOT USE_FRAMEWORKS )
 	TARGET_LINK_LIBRARIES( ${targetname} "nnfw" )
 ENDIF( NOT USE_FRAMEWORKS )
 
 ENDMACRO(TARGET_USE_NNFW)
+
+
+###################################
+### MACRO for C Project         ##
+##################################
+MACRO( TARGET_USE_CNNFW targetname )
+
+GET_TARGET_PROPERTY( OLD1 ${targetname} COMPILE_FLAGS )
+IF ( OLD1 MATCHES NOTFOUND )
+	SET( OLD1 "" )
+ENDIF( OLD1 MATCHES NOTFOUND )
+SET_TARGET_PROPERTIES( ${targetname} PROPERTIES COMPILE_FLAGS "${OLD1} -I@INCLUDES@ @CFLA@" )
+
+GET_TARGET_PROPERTY( OLD2 ${targetname} LINK_FLAGS )
+IF ( OLD2 MATCHES NOTFOUND )
+	SET( OLD2 "" )
+ENDIF( OLD2 MATCHES NOTFOUND )
+SET_TARGET_PROPERTIES( ${targetname} PROPERTIES LINK_FLAGS "${OLD2} @LFLA@ @CLIB@" )
+
+IF( NOT USE_FRAMEWORKS )
+	TARGET_LINK_LIBRARIES( ${targetname} "cnnfw" )
+ENDIF( NOT USE_FRAMEWORKS )
+
+ENDMACRO(TARGET_USE_CNNFW)
 
 SET (NNFW_FOUND TRUE)
 ENDIF (NOT NNFW_FOUND)
